CloudFormation Templates/Cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy Procore Website

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where the instances and load balancer will be launched

  SubnetId1:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet 1

  SubnetId2: 
    Type: AWS::EC2::Subnet::Id
    Description: Subnet 2

  InstanceType:
    Type: String
    Default: t2.micro
    Description: EC2 instance type that will be used

Resources:
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for EC2 instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow SSH access
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTP access
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
        - CidrIp: 0.0.0.0/0
          Description: Allow HTTPS access
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic
          IpProtocol: -1

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: ProcoreWebsiteLT
      LaunchTemplateData:
        ImageId: ami-09538990a0c4fe9be
        InstanceType: !Ref InstanceType
        SecurityGroupIds:
          - !GetAtt EC2SecurityGroup.GroupId
        UserData: !Base64 |
          #!/bin/bash
          yum update -y
          yum install -y ruby
          yum install -y wget
          yum install -y httpd
          systemctl start httpd.service
          systemctl enable httpd.service
          yum install -y aws-cli
          yum install -y git
          aws configure set default.region us-east-1
          git clone https://shawn-viti-at-767744426419:AG+rM0dTnDsO2BF5qNjRNxTwyn1ghPtIz8z8vTpRdqw=@git-codecommit.us-east-1.amazonaws.com/v1/repos/Ticket10_Repo /var/www/html
          cd /home/ec2-user
          wget https://aws-codedeploy-us-east-1.s3.us-east-1.amazonaws.com/latest/install
          chmod +x ./install
          sudo ./install auto
          systemctl restart httpd.service

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: ProcoreAuto
      LaunchTemplate:
        LaunchTemplateName: ProcoreWebsiteLT
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier:
        - !Ref SubnetId1
        - !Ref SubnetId2
      MinSize: 1
      MaxSize: 3
      DesiredCapacity: 2
      TargetGroupARNs:
        - !Ref Ec2TargetGroup

  Ec2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      VpcId: !Ref VpcId
      Port: 80
      Protocol: HTTP

 

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ProcoreELB
      Subnets:
        - !Ref SubnetId1
        - !Ref SubnetId2
      SecurityGroups:
        - !GetAtt EC2SecurityGroup.GroupId
      Type: application
      Tags:
        - Key: Name
          Value: ProcoreLB

  ELBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref Ec2TargetGroup

Outputs:
  LoadBalancerURL:
    Value: !GetAtt LoadBalancer.DNSName
    Description: URL of the Load Balancer
